--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit
-cohere
-langchain==0.1.12
 pymupdf
-
+streamlit>=1.36.0
+cohere>=5.3.4
+langchain-core>=0.2.0
+langchain-community>=0.2.0
